@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19990807
+MANIFEST for ded, version t19990809
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
@@ -17,6 +17,7 @@ src                             subdirectory
 src/README                      to-do list for DED
 src/boxchars.c                  encapsulate knowledge of box-characters
 src/ccodes.rc                   sample $HOME/.dir_colors using ANSI numeric coding
+src/cnames.rc                   sample $HOME/.dir_colors using names
 src/ded.c                       main program of DED
 src/ded.h                       common definitions of DED
 src/ded.hlp                     help-file for DED
